Fix: rest button on mobile

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -23,3 +23,9 @@
   display: flex;
   gap: 40px;
 }
+
+@media (width <= 600px) {
+  .buttons {
+    flex-direction: column;
+  }
+}
